--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,6 +30,14 @@
                     Search
                 </a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link"
+                   href="https://docs.google.com/spreadsheets/d/1MAROLnkYIlQ-8TdFi4oohrv9h0WrRX_awoALpScIfZ8/edit?usp=sharing"
+                   target="_blank">
+                    <i class="fa fa-area-chart"></i>
+                    Data Set
+                </a>
+            </li>
             <ng-container *ngIf="isLoggedIn">
                 <li class="nav-item">
                     <a class="nav-link" (click)="goToProfile()">Your profile</a>
