--- a/src/app/components/day/day.component.html
+++ b/src/app/components/day/day.component.html
@@ -2,13 +2,21 @@
     <div class="row">
         <div class="col-md-12 my-3">
             <app-card>
-                <h1>Shows On This Day</h1>
+                <h1>
+                    Shows For:
+                    <span *ngIf="!dateReady">
+                        ...
+                    </span>
+                    <span *ngIf="dateReady">
+                        {{month}}/{{date}}
+                    </span>
+                </h1>
             </app-card>
         </div>
     </div>
     <div class="row">
-        <ng-container *ngIf="vmArchiveService.todayReady; else loading">
-            <ng-container *ngFor="let show of vmArchiveService.todayShows">
+        <ng-container *ngIf="showsReady; else loading">
+            <ng-container *ngFor="let show of shows">
                 <div class="col-md-6 my-3">
                     <app-show-card [show]="show"></app-show-card>
                 </div>
