--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,12 +1,82 @@
-<h1>Search All Shows</h1>
-<hr>
-<ng-container *ngIf="vmArchiveService.allReady; else loading">
-    <ng-container *ngFor="let show of vmArchiveService.allShows">
-        {{show | json}}
-        <hr>
-    </ng-container>
-</ng-container>
-
+<app-body>
+    <div class="row">
+        <div class="col-md-12 my-3">
+            <app-card>
+                <h1>
+                    Search All Shows
+                </h1>
+            </app-card>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 my-3">
+            <app-card>
+                <h3>Search By Day</h3>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="month">Month</label>
+                            <select class="form-control border-dark" id="month" [(ngModel)]="month">
+                                <option *ngFor="let month of availableMonths">{{month}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="date">Day</label>
+                            <select class="form-control border-dark" id="date" [(ngModel)]="date">
+                                <option *ngFor="let day of availableDays">{{day}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-dark btn-block" (click)="checkDate()">
+                            Check Date
+                            <i class="fa fa-arrow-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </app-card>
+        </div>
+        <div class="col-md-6 my-3">
+            <app-card>
+                <h3>Search By Act / Band</h3>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <label for="actName">
+                                Act Name
+                            </label>
+                            <input
+                                    type="text"
+                                    class="form-control border-dark"
+                                    name="actName"
+                                    [(ngModel)]="actName"
+                                    id="actName"
+                                    placeholder="Act Name"
+                                    aria-label="Act Name"
+                                    aria-describedby="button-addon"
+                            />
+                        </div>
+                        <div class="col-md-12 mt-3 mb-0">
+                            <button class="btn btn-dark btn-block" (click)="checkAct()">
+                                Check Act
+                                <i class="fa fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </app-card>
+        </div>
+        <!--        <ng-container *ngIf="vmArchiveService.allReady; else loading">-->
+        <!--            <ng-container *ngFor="let show of vmArchiveService.allShows">-->
+        <!--                <div class="col-md-6 my-3">-->
+        <!--                    <app-show-card [show]="show"></app-show-card>-->
+        <!--                </div>-->
+        <!--            </ng-container>-->
+        <!--        </ng-container>-->
+    </div>
+</app-body>
 <ng-template #loading>
     <app-loading></app-loading>
 </ng-template>
