stable clean version

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -14,9 +14,9 @@
         </div>
         <div class="col-md-6 my-3">
             <a (click)="goToSearch()">
-                <app-card [title]="'Calendar'" [icon]="'fa-search'" [useHover]="true">
+                <app-card [title]="'Search'" [icon]="'fa-search'" [useHover]="true">
                     <p>
-                        Search shows by date or band.
+                        Search shows by date or act.
                     </p>
                 </app-card>
             </a>
