--- a/src/app/components/band/band.component.html
+++ b/src/app/components/band/band.component.html
@@ -1,30 +1,4 @@
-<app-body>
-    <div class="row">
-        <div class="col-md-12 my-3">
-            <app-card>
-                <h1>
-                    Shows For:
-                    <span *ngIf="!actReady">
-                        ...
-                    </span>
-                    <span *ngIf="actReady">
-                        {{actFixed}}
-                    </span>
-                </h1>
-            </app-card>
-        </div>
-    </div>
-    <div class="row">
-        <ng-container *ngIf="showsReady; else loading">
-            <ng-container *ngFor="let show of shows">
-                <div class="col-md-6 my-3">
-                    <app-show-card [show]="show"></app-show-card>
-                </div>
-            </ng-container>
-        </ng-container>
-    </div>
-</app-body>
-
-<ng-template #loading>
-    <app-loading></app-loading>
-</ng-template>
+<app-show-list [header]="actFixed"
+               [shows]="shows"
+               [ready]="showsReady">
+</app-show-list>
