--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,13 +1,5 @@
+<app-header [title]="'Search Shows'"></app-header>
 <app-body>
-    <div class="row">
-        <div class="col-md-12 my-3">
-            <app-card>
-                <h1>
-                    Search All Shows
-                </h1>
-            </app-card>
-        </div>
-    </div>
     <div class="row">
         <div class="col-md-6 my-3">
             <app-card>
