update vm archive links

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -38,6 +38,22 @@
                     Data Set
                 </a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link"
+                   href="https://twitter.com/VaudevilleMewsB"
+                   target="_blank">
+                    <i class="fa fa-twitter"></i>
+                    Twitter Bot
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link"
+                   href="https://honestjuicebox.itch.io/a-monday-on-4th-street"
+                   target="_blank">
+                    <i class="fa fa-gamepad"></i>
+                    Tribute Game
+                </a>
+            </li>
             <ng-container *ngIf="isLoggedIn">
                 <li class="nav-item">
                     <a class="nav-link" (click)="goToProfile()">Your profile</a>
